src/app/globals.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  // Color theme
  --primary: #fff;
  --second: #000;
  --accent1: #594CFF;
  --accent2: #110039;

  --nav-items: rgb(186, 186, 186, 0.20);

  --scroll-background: #aeaeae;
  --scroll-hover: #7e7d82;
  
  // Hover
  --hover-transition: border 120ms ease, background 120ms ease;
  --border-hover: 0.08rem solid transparent;
  
  // Sizing
  --blur: 1.42rem;
  --padding: 0.875rem;
  --letter-2: -0.3px;

  // Transitions
  --theme-transition: 250ms ease;
  --transition1: 350ms cubic-bezier(.2,.6,.3,1);
  --transition2: 440ms cubic-bezier(.2,.6,.3,1);
}



// Themes
body[data-theme='dark'] {
  --primary: #000;
  --second: #fff;

  --scroll-background: #4b4b5d;
}



// General resets
body {
  background: var(--primary);
  color: var(--second);
  transition: background var(--theme-transition), color var(--theme-transition);
  font-family: var(--poppins);

  // Dev only
  margin-bottom: 8000px;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--eiko);
  font-weight: 300;
  color: var(--second);
  transition: var(--theme-transition);
}

a {
  transition: var(--theme-transition);
}



// Desktop view
@media all and (min-width: 1024px) {
  :root {
    --padding: 1.81rem;
    font-size: 16px;
  }

  // Disable cursor
  *, html {
    cursor: none;
  }



  // Scrollbar
  body::-webkit-scrollbar {
    width: 0.475vw; // Whole width
  }
  
  body::-webkit-scrollbar-track {
    background: initial; // Make the track invisible
  }
  
  body::-webkit-scrollbar-thumb {
    background: var(--scroll-background); // Scrollbar thumb
    border-radius: 20rem;
    cursor: default;

    &:hover {
      background: var(--scroll-hover);
    }
  }
}

